--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: Hello,第9527位访客
 description:
 author: 漆黑小T
 language: zh-Hans
-timezone: Asia/Beijing
+timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -50,8 +50,8 @@ highlight:
 index_generator:
   path: ''
   per_page: 10
-  order_by: -date
-  
+  order_by: date
+
 # Category & Tag
 default_category: uncategorized
 category_map:
@@ -78,5 +78,5 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/BugsMaster/BugsMaster.github.io.git
+  repository: https://github.com/BugsMaster/BugsMaster.github.io.git
   branch: master
