添加一篇小计

--- a/_config.yml
+++ b/_config.yml
@@ -79,4 +79,5 @@ theme: next
 deploy:
   type: git
   repository: https://github.com/BugsMaster/BugsMaster.github.io.git
+  #repository: git@github.com:BugsMaster/BugsMaster.github.io.git
   branch: master
